--- a/src/main/resources/META-INF/native-image/ch.so.agi/ili2gpkg-application/native-image.properties
+++ b/src/main/resources/META-INF/native-image/ch.so.agi/ili2gpkg-application/native-image.properties
@@ -1,3 +1,3 @@
-Args = -H:IncludeResources=logback.xml|application.yml|bootstrap.yml \
+Args = -H:IncludeResources=logback.xml|application.yml|bootstrap.yml|templates/.* \
        -H:Name=ili2gpkg \
-       -H:Class=ch.so.agi.Application
+       -H:Class=ch.so.agi.ili2gpkgApplication
