--- a/src/main/resources/META-INF/native-image/ch.so.agi/ili2gpkg-application/native-image.properties
+++ b/src/main/resources/META-INF/native-image/ch.so.agi/ili2gpkg-application/native-image.properties
@@ -1,3 +1,10 @@
 Args = -H:IncludeResources=logback.xml|application.yml|bootstrap.yml|templates/.* \
        -H:Name=ili2gpkg \
-       -H:Class=ch.so.agi.ili2gpkgApplication
+       -H:Class=ch.so.agi.ili2gpkg.Application \
+       --initialize-at-build-time=org.sqlite.JDBC \
+       -H:IncludeResourceBundles=ch.ehi.ili2db.Version \
+       -H:IncludeResourceBundles=ch.interlis.ili2c.Version \
+       -H:IncludeResourceBundles=ch/interlis/iox_j/Version \
+       -H:IncludeResourceBundles=ch.interlis.ili2c.metamodel.ErrorMessages \
+       -H:IncludeResourceBundles=ch.ehi.basics.view.resources.GenericFileFilter \
+       -H:ReflectionConfigurationResources=${.}/reflection-config.json       
