Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ stages:
         publishJUnitResults: false
         tasks: 'assemble'
     - task: Gradle@2
+      condition: succeeded()
       inputs:
         workingDirectory: ''
         gradleWrapperFile: 'gradlew'
