--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,11 @@ deploy:
     script: ./gradlew pushDockerImages
     on:
       branch: master
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
